# minimint-backend

./: Cargo.toml  build.rs
proto/: minimint.proto
src/: main.rs
