[package]
name = "minimint"
version = "0.1.0"
edition = "2021"

[dependencies]
tonic = { version = "0.11.0", features = ["codegen", "prost", "transport"], default-features = false }
prost = { version = "0.12.0", features = ["derive"], default-features = false }
tokio = { version = "1.38.0", features = ["macros", "rt-multi-thread"], default-features = false }

[build-dependencies]
tonic-build = "0.11"
